--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="about-text">
             <h3>藤原  良佑 fujiwara ryosuke</h3>
-            <p>はじめまして、<br>
+            <p>はじめまして<br>
               北海道出身岩手県在住のWebフリーランスです。<br>
               会社員を続けて十数年、今よりも豊かな時間を追い求め現在に至ります。
             </p>
